--- a/auswertung.tex
+++ b/auswertung.tex
@@ -2,3 +2,45 @@
 \label{sec:Auswertung}
 
 \input{fehlerrechnung.tex}
+
+\begin{table}
+    \centering 
+    \caption{Abmessungen der einzelnen Bohrungen}
+\begin{tabular}{c c c c}
+    \toprule
+    Bohrung & Abstand von unten in \unit{\mm} & Abstand von oben \unit{\mm} & Durchmesser d in \unit{\mm}\\
+    \midrule
+    1&59.0&19.2&1.7 \\
+     2&60.7&17.5&1.7 \\
+     3&13.2&60.6&6.0 \\
+     4&21.7&53.2&5.0 \\
+     5&30.0&45.6&4.0 \\
+     6&38.6&38.0&3.0 \\
+     7&46.6&29.8&3.0 \\
+     8&54.7&22.8&3.0 \\
+     9&62.7&13.7&3.0 \\
+     10&70.7&6.8&3.0 \\
+    11&15.3&54.4&9.9 \\
+    \bottomrule
+    \end{tabular}
+    \label{tab:block}
+\end{table}
+
+\begin{table}
+    \centering 
+    \caption{Messwerte der Laufzeit der einzelnen Bohrungen}
+\begin{tabular}{c c}
+    \toprule
+    Bohrung & Laufzeit $t$ in \unit{\micro\sec}\\
+    \midrule
+    3&45.40 \\
+      4&39.90 \\
+      5&34.40 \\
+      6&29.00 \\
+      7&23.00 \\
+      8&17.10 \\
+      9&11.10 \\
+      \bottomrule
+    \end{tabular}
+    \label{tab:geschw}
+\end{table}
