--- a/durchfuehrung.tex
+++ b/durchfuehrung.tex
@@ -1,3 +1,26 @@
 \section{Durchführung}
-\label{sec:Durchführung}
+\label{sec:Durchfuehrung}
 
+Zuerst wird der Acrylblock mit einer Schieblehre ausgemessen. Neben der Höhe, Tiefe und 
+Breite des Acrylblocks werden außerdem die Positionen und Durchmesser der Bohrungen bestimmt.
+
+Danach werden für sieben Bohrungen die Laufzeiten mittels des Impuls-Echo-Verfahrens gemessen, um 
+damit die Schallgeschwindigkeit und die Dicke der Anpassungsschicht zu bestimmen.
+
+\subsection{Untersuchung des Acrylblocks mit dem A-Scan}
+Nun werden mittels eines A-Scans die Größe und Positionen aller Bohrungen bestimmt. Dazu wird die 
+2-MHz-Sonde verwendet. Als Kontaktmittel zwischen dem Acrylblock und der Sonde dient destilliertes Wasser.
+Danach wird der Acrylblock umgedreht und erneut ein A-Scan von allen Bohrungen aufgenommen.
+
+\subsection{Untersuchung des Auflösungsvermögens}
+Um das Auflösungsvermögen zu bestimmen, werden die beiden benachbarten Bohrungen 1 und 2 mit einer 1-MHz-Sonde 
+und einer 2-MHz-Sonde untersucht und die erhaltenen Graphen dann miteinander verglichen.
+
+\subsection{Untersuchung des Acrylblocks mit dem B-Scan}
+Erneut wird der Acrylblock von beiden Seiten mit einer 2-MHz-Sonde untersucht. Dabei wird ein B-Scan beider 
+Seiten erstellt, um die Abmessungen der Bohrungen zu bestimmen.
+
+\subsection{Untersuchung eines Brustmodells mit einem B-Scan}
+Zuerst wird dei ungefähre Lage der beiden Tumore in dme Brustmodell ertastet. Nun wird mit der 2-MHz-Sonde 
+auf einer gedachten Verbindungslinie zwischen den ertasteten Stellen ein B-Scan aufgezeichnet, welcher 
+sich qualitativ erklären lässt. Hieraus ist auch die Art des Tumors bestimmbar.
