--- a/lit.bib
+++ b/lit.bib
@@ -1,5 +1,24 @@
-@manual{ap308,
-title = {Versuchsanleitung zu Versuch Nr. 308 Verdampfungswärme und Dampfdruck-Kurve},
+@manual{apus1,
+title = {Versuchsanleitung zu Versuch Nr. US1 Scanverfahren in der Ultraschalltechnik},
 year = 2023,
 organization = {Fakultät Physik, TU Dortmund},
+}
+
+@online{cluft,
+url = {https://www.smart-rechner.de/geschwindigkeiten_umr/infothek/umrechner_schallgeschwindigeit_ms.php},
+title = {Umrechnung von Schallgeschwindigkeit in Meter pro Sekunde (m/s) und umgekehrt},
+urldate = {2023-06-12},
+}
+
+@online{cwasser,
+url = {https://thebayexclusivehotelphuket.com/schallgeschwindigkeit-im-wasser/#:~:text=Schallwellen%20neigen%20dazu%2C%20bei%20h%C3%B6heren%20Temperaturen%20schneller%20zu,%2820%20bis%2025%20%C2%B0C%29.%20Du%20Nicky%20%E2%80%94%202000},
+title = {Schallgeschwindigkeit im Wasser},
+date = {2021-02-11},
+}
+
+@online{cacryl,
+url = {https://www.bing.com/search?q=schallgeschwindigkeit+acryl&qs=UT&pq=schallgeschwindigkeit+acr&sc=9-25&cvid=044A1226A71A4BA6AAB9D8BA59F9D6ED&FORM=QBRE&sp=1&ghc=1&lq=0},
+title = {D. ULTRASCHALLPRÜFUNG - Auf Schallwellen durch Festkörper „reiten“},
+author = {Dick, Wolfgang},
+urldate = {2023-06-12},
 }
