--- a/auswertung.tex
+++ b/auswertung.tex
@@ -2,7 +2,7 @@
 \label{sec:Auswertung}
 
 \input{fehlerrechnung.tex}
-
+Die Abmessungen der einzelnen Bohrungen befinden sich in \autoref{tab:block}. Die Nummerierung der Bohrungen befinden sich in \autoref{fig:acryl}.
 \begin{table}
     \centering 
     \caption{Abmessungen der einzelnen Bohrungen}
@@ -26,6 +26,9 @@
     \label{tab:block}
 \end{table}
 
+Um die Schallgeschwindigkeit und die Dicke der Anpassungsschicht zu bestimmen, werden für sieben Bohrungen die Laufzeiten bestimmt. Diese befinden 
+sich in \autoref{tab:geschw}.
+
 \begin{table}
     \centering 
     \caption{Messwerte der Laufzeit der einzelnen Bohrungen}
@@ -33,14 +36,18 @@
     \toprule
     Bohrung & Laufzeit $t$ in \unit{\micro\sec}\\
     \midrule
-    3&45.40 \\
-      4&39.90 \\
-      5&34.40 \\
-      6&29.00 \\
-      7&23.00 \\
-      8&17.10 \\
-      9&11.10 \\
+    3&45.4 \\
+      4&39.9 \\
+      5&34.4 \\
+      6&29.0 \\
+      7&23.0 \\
+      8&17.1 \\
+      9&11.1 \\
       \bottomrule
     \end{tabular}
     \label{tab:geschw}
 \end{table}
+
+Nun werden die Abstände der Bohrungen von der oberen Fläche gegen die Laufzeiten aufgetragen und eine Ausgleichsgerade gebildet. Diese befinden sich in 
+\autoref{fig:plotv}.
+
