--- a/auswertung.tex
+++ b/auswertung.tex
@@ -48,6 +48,51 @@ sich in \autoref{tab:geschw}.
     \label{tab:geschw}
 \end{table}
 
-Nun werden die Abstände der Bohrungen von der oberen Fläche gegen die Laufzeiten aufgetragen und eine Ausgleichsgerade gebildet. Diese befinden sich in 
-\autoref{fig:plotv}.
+Nun werden die Abstände der Bohrungen von der oberen Fläche gegen die Hälfte der Laufzeiten aufgetragen (da die Strecke bis zum Loch zweimal 
+durchlaufen wird) und eine Ausgleichsgerade gebildet. Diese befinden sich in \autoref{fig:plotv}.
+\begin{figure}
+    \centering
+    \includegraphics[height = 8cm]{build/plotv.pdf}
+    \caption{Regression zur Bestimmung der Schallgeschwindigkeit und der Dicke der Anpassungsschicht.}
+    \label{fig:plotv}
+\end{figure}
 
+Die Schichtdicke entspricht dem Betrag des y-Achsenabschnitt
+\begin{equation*}
+    d = \lvert b\rvert = \lvert (-1.1 \pm 0.4) \, \unit{\mm}\rvert =  (1.1 \pm 0.4) \, \unit{\mm} \& .
+\end{equation*}
+Die Schallgeschwindigkeit in Acryl ergibt sich über die Steigung der Ausgleichsgeraden
+\begin{equation*}
+    v = (2.718 \pm 0.025) \, \unit{\mm \per \micro\sec} = (2718\pm 25) \, \unit{\m\per\sec} \; .
+\end{equation*}
+
+\subsection{Untersuchung des Acrylblocks}
+Die Messwerte des A-Scans von der oberen und unteren Seite des Acrylblocks befinden sich in \autoref{tab:AScan}. Dabei wurden die Tiefenmessungen 
+mit der Schichtdicke korrigiert. Mithilfe der korrigierten Werte und der gemessenen Gesamthöhe des Blocks $h = 79.9\,\unit{\mm}$ ergibt sich über 
+\begin{equation*}
+    d = h - a_{\symup{ob}} - a_{\symup{unt}}
+\end{equation*}
+der Durchmesser der einzelnen Bohrungen, welcher ebenfalls in \autoref{tab:AScan} dargestllt ist.
+
+\begin{table}
+    \centering 
+    \caption{Messwerte der Tiefe der einzelnen Bohrungen sowie dessen Durchmesser.}
+\begin{tabular}{c c c c c c}
+    \toprule
+    Bohrung & Tiefe von oben in \unit{\mm} & Tiefe nach der Korrektur in \unit{\mm}& Tiefe von unten in \unit{\mm} & Tiefe nach der Korrektur in \unit{\mm} & Durchmesser d in \unit{\mm}\\
+    \midrule
+                        1&20.6&19.5&60.4&59.3&1.1 \\
+                         2&19.0&17.9&62.0&60.9&1.1 \\
+                         3&62.0&60.9&14.5&13.4&5.6 \\
+                         4&54.5&53.4&23.0&21.9&4.6 \\
+                         5&46.9&45.8&31.6&30.5&3.6 \\
+                         6&39.5&38.4&40.1&39.0&2.5 \\
+                         7&31.4&30.3&47.9&46.8&2.8 \\
+                         8&23.3&22.2&56.0&54.9&2.8 \\
+                         9&15.2&14.1&64.1&63.0&2.8 \\
+                                     10&7.2&6.1&&& \\
+                        11&55.8&54.7&16.8&15.7&9.5 \\
+                        \bottomrule
+    \end{tabular}
+    \label{tab:AScan}
+\end{table}
