--- a/diskussion.tex
+++ b/diskussion.tex
@@ -1,2 +1,40 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+
+Bei der Messung der Schallgeschwindigkeit kann der experimentelle Wert $v = (2718\pm 25) \, \unit{\m\per\s}$ mit dem theoretischen Wert 
+$2700 \,\unit{\m\per\s}$ verglichen werden. Die experimentell bestimmte Schallgeschwindigkeit stimmt im Rahmen der Fehlerabweichung mit 
+dem theoretischen Wert überein. Die Abweichung zwischen beiden Werten beträgt $0.6\,\%$. 
+
+\subsection{Untersuchung des Acrylblocks mit einem A-Scan}
+Sowohl die Werte des A-Scans als auch die Ergebnisse des B-Scans lassen sich mit den mit der Schieblehre ausgemessenen Werten sowie untereinander 
+vergleichen.
+
+Die Abweichungen des A-Scans zu den mit der Schieblehre gemessenen Werten sind in \autoref{tab:AAbweichung} dargestellt. 
+
+\begin{table}
+    \centering 
+    \caption{Abweichungen zwischen dem A-Scan und den mit der Schieblehre bestimmten Werten.}
+\begin{tabular}{c c c c}
+    \toprule
+    & \multicolumn{3}{c}{Abweichung der Messungen} \\
+    Bohrung & von unten & von oben & Durchmesser\\
+    \midrule
+    1&0.5&1.6&35.3 \\
+    2&0.3&2.3&35.3 \\
+     3&1.5&0.5&6.7 \\
+     4&0.9&0.4&8.0 \\
+    5&1.7&0.4&10.0 \\
+    6&1.0&1.1&16.7 \\
+     7&0.4&1.7&7.7 \\
+     8&0.4&2.6&7.7 \\
+     9&0.5&2.9&7.7 \\
+    10&5.9&--&-- \\
+    11&2.6&0.6&4.0 \\
+    \bottomrule
+\end{tabular}
+\label{tab:AAbweichung}
+\end{table}
+Dass die Messwerte nicht genau übereinstimmen, kann an ungenauen Messungen mit der Schieblehre sowie der Ungenauigkeit der Dicke der Anpassungsschicht 
+liegen, die sich auf die Messergebnisse des A-Scans fortpflanzt.Die Abweichungen sind allgemein bei kleineren Messwerten größer, da bei einer kleinen 
+Größenordnung der Messfehler mehr ins Gewicht fällt. Allgemein lässt sich sagen, dass die Messung mittels Ultraschall/A-Scan vermutlich genauere Ergebnisse 
+liefert.
