--- a/auswertung.tex
+++ b/auswertung.tex
@@ -124,3 +124,52 @@ Wenn die beiden Peaks ungefähr auf der Höhe von $20\,\unit{\mm}$ der beiden Gr
 ein höheres Auflösungsvermögen hat. Dies erkennt man daran, dass die Peaks bei der 1-MHz-Sonde undeutlich und schwieriger abzulesen sind.
 
 \subsection{Untersuchung des Acrylblocks mit einem B-Scan}
+\label{Sec:AuswertungBScan}
+Um die Tiefen der Störstellen zu bestimmen, wurde im Programm der Ort der jeweiligen Stelle abgelesen und notiert. Die Berechnung
+des Durchmessers erfolgt analog zu jener des A-Scans. 
+\begin{figure}
+    \centering
+    \includegraphics[height = 4cm]{bscan oben.pdf}
+    \caption{B-Scan von der Oberseite.}
+    \label{fig:boben}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[height = 4cm]{bscan unten.pdf}
+    \caption{B-Scan von der Unterseite.}
+    \label{fig:bunten}
+\end{figure}
+
+\begin{table}
+    \centering 
+    \caption{Messwerte der Tiefe der einzelnen Bohrungen sowie dessen errechnete Durchmesser.}
+\begin{tabular}{c | c c | c c | c}
+    \toprule
+    & \multicolumn{2}{c}{oben}& \multicolumn{2}{c}{unten} & \\
+    Bohrung & Tiefe \/\unit{\mm} &  nach Korrektur \/\unit{\mm}& Tiefe \/ \unit{\mm} & nach Korrektur \/ \unit{\mm} & d \/ \unit{\mm}\\
+    \midrule
+           1 & 21.1 & 20.0 & 60.8 & 59.7 & 0.2\\
+           2 & 19.3 & 18.2 & 62.2 & 61.1 & 0.6\\
+           3 & 62.4 & 61.3 & 14.9 & 13.8 & 4.6\\
+           4 & 55.1 & 54.0 & 23.6 & 22.5 & 3.4\\
+           5 & 47.5 & 46.4 & 31.9 & 30.8 & 2.7\\
+           6 & 40.1 & 39.0 & 40.8 & 39.7 & 1.5\\
+           7 & 31.9 & 30.8 & 48.7 & 47.6 & 1.5\\
+           8 & 23.7 & 22.6 & 56.4 & 55.3 & 2.0\\
+           9 & 15.8 & 14.7 & 64.5 & 63.4 & 1.8\\
+           10& 8.0  & 6.9  & -- & -- &     \\
+           11& 56.2 & 55.1 & 17.2 & 16.1 & 8.7\\
+    \bottomrule
+    \end{tabular}
+    \label{tab:AScan}
+\end{table}
+
+\subsection{Lokalisierung und Identifizierung der Tumore.}
+\begin{figure}
+    \centering
+    \includegraphics[height = 4cm]{vier.pdf}
+    \caption{B-Scan der Tumore.}
+    \label{fig:Tumore}
+\end{figure}
+In \autoref{fig:Tumore} sind die entdeckten Tumore abgebildet. Es ist deutlich zu sehen, dass der rechte sowohl größer als auch dichter als der Linke ist. Aufgrund des unterschiedlichen Aussehens bzw. der
+unterschiedlichen Farbgebung lässt sich vermuten, dass es sich bei dem linken Tumor um eine Zyste und beim rechten um ein Tumor aus Gewebe handelt.
