--- a/auswertung.tex
+++ b/auswertung.tex
@@ -161,13 +161,13 @@ des Durchmessers erfolgt analog zu jener des A-Scans.
            11& 56.2 & 55.1 & 17.2 & 16.1 & 8.7\\
     \bottomrule
     \end{tabular}
-    \label{tab:AScan}
+    \label{tab:BScan}
 \end{table}
 
 \subsection{Lokalisierung und Identifizierung der Tumore.}
 \begin{figure}
     \centering
-    \includegraphics[height = 4cm]{vier.pdf}
+    \includegraphics[width = 4cm]{vier.pdf}
     \caption{B-Scan der Tumore.}
     \label{fig:Tumore}
 \end{figure}
