--- a/diskussion.tex
+++ b/diskussion.tex
@@ -6,7 +6,7 @@ $2700 \,\unit{\m\per\s}$ verglichen werden. Die experimentell bestimmte Schallge
 dem theoretischen Wert überein. Die Abweichung zwischen beiden Werten beträgt $0.6\,\%$. 
 
 \subsection{Untersuchung des Acrylblocks mit einem A-Scan}
-Sowohl die Werte des A-Scans als auch die Ergebnisse des B-Scans lassen sich mit den mit der Schieblehre ausgemessenen Werten sowie untereinander 
+Sowohl die Werte des A-Scans als auch die Ergebnisse des B-Scans lassen sich mit den mit der Schieblehre ausgemessenen Werten %sowie untereinander 
 vergleichen.
 
 Die Abweichungen des A-Scans zu den mit der Schieblehre gemessenen Werten sind in \autoref{tab:AAbweichung} dargestellt. 
@@ -16,7 +16,7 @@ Die Abweichungen des A-Scans zu den mit der Schieblehre gemessenen Werten sind i
     \caption{Abweichungen zwischen dem A-Scan und den mit der Schieblehre bestimmten Werten.}
 \begin{tabular}{c c c c}
     \toprule
-    & \multicolumn{3}{c}{Abweichung der Messungen} \\
+    & \multicolumn{3}{c}{Prozentuale Abweichung der Messungen des A-Scans.} \\
     Bohrung & von unten & von oben & Durchmesser\\
     \midrule
     1&0.5&1.6&35.3 \\
@@ -35,6 +35,36 @@ Die Abweichungen des A-Scans zu den mit der Schieblehre gemessenen Werten sind i
 \label{tab:AAbweichung}
 \end{table}
 Dass die Messwerte nicht genau übereinstimmen, kann an ungenauen Messungen mit der Schieblehre sowie der Ungenauigkeit der Dicke der Anpassungsschicht 
-liegen, die sich auf die Messergebnisse des A-Scans fortpflanzt.Die Abweichungen sind allgemein bei kleineren Messwerten größer, da bei einer kleinen 
+liegen, die sich auf die Messergebnisse des A-Scans fortpflanzt. Die Abweichungen sind allgemein bei kleineren Messwerten größer, da bei einer kleinen 
 Größenordnung der Messfehler mehr ins Gewicht fällt. Allgemein lässt sich sagen, dass die Messung mittels Ultraschall/A-Scan vermutlich genauere Ergebnisse 
 liefert.
+
+\subsection{Untersuchung des Acrylblocks mit einem B-Scan.}
+\begin{table}
+    \centering 
+    \caption{Abweichungen zwischen dem B-Scan und den mit der Schieblehre bestimmten Werten.}
+\begin{tabular}{c c c c}
+    \toprule
+    & \multicolumn{3}{c}{Prozentuale Abweichung der Messungen des B-Scans.} \\
+    Bohrung & von unten & von oben & Durchmesser\\
+    \midrule
+    1&1.2&4.2&88.2 \\
+    2&0.7&4&64.7 \\
+     3&4.5&1.2&23.3 \\
+     4&3.7&1.5&68.0 \\
+    5&6.3&1.8&67.5 \\
+    6&2.8&2.6&50.0 \\
+     7&2.1&3.4&50 \\
+     8&1.1&0.9&33.3 \\
+     9&1.1&7.3&40 \\
+    10&--&1.5&-- \\
+    11&5.2&0.5&13.8 \\
+    \bottomrule
+\end{tabular}
+\label{tab:BAbweichung}
+\end{table}
+In \autoref{tab:BAbweichung} sind die Abweichungen vom B-Scan zu den Messungen der Schieblehre aufgetragen. Bei der Bestimmung des Durchmessers sind Abweichungen von $>50\%$ keine Seltenheit.
+Die Abweichung des B-Scans weichen stark von den Werten, die mit der Schieblehre gemessen wurden ab. Grund hierfür könnte unter anderem die ungenaue Messung sein. 
+Wie in \autoref{fig:bunten} und \autoref{fig:foben} zu sehen, nehmen die Löcher des Acrylquaders einen großen Bereich ein ohne deutliche Abgrenzungen zu haben.
+Aufgrund der undeutlichen Grenzen war es also häufig nicht möglich einen genauen Punkt zu finden wo das Loch aufhört. Die Schieblehre scheint hier ein zuverlässigeres Mittel 
+als der B-Scan zu sein.
