--- a/auswertung.tex
+++ b/auswertung.tex
@@ -167,7 +167,7 @@ des Durchmessers erfolgt analog zu jener des A-Scans.
 \subsection{Lokalisierung und Identifizierung der Tumore.}
 \begin{figure}
     \centering
-    \includegraphics[width = 4cm]{vier.pdf}
+    \includegraphics[height = 4cm]{vier.pdf}
     \caption{B-Scan der Tumore.}
     \label{fig:Tumore}
 \end{figure}
